modified schema, restroom data edited, added company role