@@ -2,7 +2,7 @@ package dev.coms4156.project.backend.controller;
 
 import dev.coms4156.project.backend.model.EditProposal;
 import dev.coms4156.project.backend.model.Restroom;
-import dev.coms4156.project.backend.service.MockApiService;
+import dev.coms4156.project.backend.service.db.EditProposalDbService;
 import dev.coms4156.project.backend.service.db.RestroomDbService;
 import dev.coms4156.project.backend.service.db.ReviewDbService;
 import io.swagger.v3.oas.annotations.Operation;
@@ -19,7 +19,6 @@ import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.env.Environment;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -43,32 +42,28 @@ public class RestroomController {
   private static final String ROLE_USER_EXPRESSION = "hasRole('USER')";
   private static final String ERROR_KEY = "error";
 
-  private final MockApiService mockService;
-  private final RestroomDbService dbService;
+  private final RestroomDbService restroomDbService;
   private final ReviewDbService reviewDbService;
-  private final boolean useMock;
+  private final EditProposalDbService editProposalDbService;
 
   /**
    * Constructor for DI.
    *
-   * @param mockService mock service implementation (optional)
-   * @param dbService database service implementation
+   * @param restroomDbService database service implementation
    * @param reviewDbService review database service for getting top reviews
-   * @param env Spring environment to check active profile
+   * @param editProposalDbService edit proposal database service
    */
   public RestroomController(
-      @Autowired(required = false) final MockApiService mockService,
-      @Autowired(required = false) final RestroomDbService dbService,
-      @Autowired(required = false) final ReviewDbService reviewDbService,
-      final Environment env) {
-    this.mockService = mockService;
-    this.dbService = dbService;
+      @Autowired final RestroomDbService restroomDbService,
+      @Autowired final ReviewDbService reviewDbService,
+      @Autowired final EditProposalDbService editProposalDbService) {
+    this.restroomDbService = restroomDbService;
     this.reviewDbService = reviewDbService;
-    this.useMock = mockService != null && Arrays.asList(env.getActiveProfiles()).contains("mock");
+    this.editProposalDbService = editProposalDbService;
   }
 
   /**
-   * Submit a new restroom (mock: accepted right away).
+   * Submit a new restroom to the database.
    *
    * @param restroom minimal restroom payload
    * @return created restroom
@@ -90,9 +85,10 @@ public class RestroomController {
     toCreate.setAddress(restroom.getAddress());
     toCreate.setLatitude(restroom.getLatitude());
     toCreate.setLongitude(restroom.getLongitude());
+    toCreate.setCompanyId(restroom.getCompanyId());
     toCreate.setHours(restroom.getHours());
     toCreate.setAmenities(restroom.getAmenities());
-    Restroom saved = useMock ? mockService.submitRestroom(toCreate) : dbService.create(toCreate);
+    Restroom saved = restroomDbService.create(toCreate);
     return ResponseEntity.status(201).body(saved);
   }
 
@@ -114,11 +110,8 @@ public class RestroomController {
       amSet = Arrays.stream(amenities.split(","))
               .map(String::trim).filter(s -> !s.isEmpty()).collect(Collectors.toSet());
     }
-    if (useMock) {
-      return ResponseEntity.ok(mockService.getNearby(lat, lng, radius, openNow, amSet, limit));
-    } else {
-      return ResponseEntity.ok(dbService.getNearby(lat, lng, radius, openNow, amSet, limit));
-    }
+    return ResponseEntity.ok(
+        restroomDbService.getNearby(lat, lng, radius, openNow, amSet, limit));
   }
 
   /**
@@ -130,22 +123,22 @@ public class RestroomController {
   @GetMapping("/{id}")
   public ResponseEntity<?> details(@PathVariable final Long id) {
     try {
-      Restroom r = useMock ? mockService.getRestroom(id) : 
-          dbService.getById(id).orElseThrow(() -> new NoSuchElementException("Restroom not found"));
+      Restroom r = restroomDbService.getById(id)
+          .orElseThrow(() -> new NoSuchElementException("Restroom not found"));
       Map<String, Object> dto = new LinkedHashMap<>();
       dto.put("id", r.getId());
       dto.put("name", r.getName());
       dto.put("address", r.getAddress());
       dto.put("latitude", r.getLatitude());
       dto.put("longitude", r.getLongitude());
+      dto.put("companyId", r.getCompanyId());
+      dto.put("companyName", r.getCompanyName());
       dto.put("hours", r.getHours());
       dto.put("amenities", r.getAmenities());
       dto.put("avg_rating", r.getAvgRating());
       dto.put("visitCount", r.getVisitCount());
-      dto.put("topReviews", useMock 
-              ? mockService.getReviews(id, "helpful").stream().limit(3).collect(Collectors.toList())
-              : reviewDbService.getByRestroomId(id, "helpful").stream().limit(3).collect(Collectors
-                .toList()));
+      dto.put("topReviews", reviewDbService.getByRestroomId(id, "helpful")
+          .stream().limit(3).collect(Collectors.toList()));
       return ResponseEntity.ok(dto);
     } catch (NoSuchElementException ex) {
       return ResponseEntity.status(404).body(Map.of(ERROR_KEY, ex.getMessage()));
@@ -165,8 +158,18 @@ public class RestroomController {
       @RequestBody final EditProposal p,
       @AuthenticationPrincipal final OAuth2AuthenticatedPrincipal principal) {
     try {
-      p.setProposerUserId(resolveUserIdentifier(principal));
-      EditProposal created = useMock ? mockService.proposeEdit(id, p) : null;
+      restroomDbService.getById(id)
+          .orElseThrow(() -> new NoSuchElementException("Restroom not found"));
+      p.setRestroomId(id);
+      String subject = resolveUserIdentifier(principal);
+      if (subject == null || subject.isBlank()) {
+        return ResponseEntity.status(401).body(Map.of(ERROR_KEY, "Unable to resolve user subject"));
+      }
+      p.setProposerUserId(subject);
+      if (p.getStatus() == null || p.getStatus().isBlank()) {
+        p.setStatus("PENDING");
+      }
+      EditProposal created = editProposalDbService.create(p);
       return ResponseEntity.status(202).body(created);
     } catch (NoSuchElementException ex) {
       return ResponseEntity.status(404).body(Map.of(ERROR_KEY, ex.getMessage()));
@@ -184,18 +187,20 @@ public class RestroomController {
   public ResponseEntity<?> visit(
       @PathVariable final Long id,
       @AuthenticationPrincipal final OAuth2AuthenticatedPrincipal principal) {
-    resolveUserIdentifier(principal);
+    String subject = resolveUserIdentifier(principal);
+    if (subject == null || subject.isBlank()) {
+      return ResponseEntity.status(401).body(Map.of(ERROR_KEY, "Unable to resolve user subject"));
+    }
     try {
-      if (useMock) {
-        return ResponseEntity.ok(mockService.recordVisit(id));
-      } else {
-        dbService.incrementVisitCount(id);
-        Map<String, Object> response = new HashMap<>();
-        response.put("restroomId", id);
-        response.put("visitCount", dbService.getById(id).map(Restroom::getVisitCount).orElse(0L));
-        response.put("visitedAt", Instant.now().toString());
-        return ResponseEntity.ok(response);
-      }
+      restroomDbService.getById(id)
+          .orElseThrow(() -> new NoSuchElementException("Restroom not found"));
+      restroomDbService.incrementVisitCount(id);
+      Map<String, Object> response = new HashMap<>();
+      response.put("restroomId", id);
+      response.put("visitCount",
+          restroomDbService.getById(id).map(Restroom::getVisitCount).orElse(0L));
+      response.put("visitedAt", Instant.now().toString());
+      return ResponseEntity.ok(response);
     } catch (NoSuchElementException ex) {
       return ResponseEntity.status(404).body(Map.of(ERROR_KEY, ex.getMessage()));
     }
@@ -203,12 +208,15 @@ public class RestroomController {
 
   private String resolveUserIdentifier(final OAuth2AuthenticatedPrincipal principal) {
     if (principal == null) {
-      return "anonymous";
+      return null;
     }
-    String email = principal.getAttribute("email");
-    if (email != null && !email.isBlank()) {
-      return email;
+    String subject = principal.getAttribute("sub");
+    if (subject == null || subject.isBlank()) {
+      subject = principal.getName();
     }
-    return principal.getName();
+    if ((subject == null || subject.isBlank()) && principal.getAttribute("email") != null) {
+      subject = principal.getAttribute("email");
+    }
+    return subject;
   }
 }
